use clap::Subcommand;
use serde::{Deserialize, Serialize};
use crate::grpc_client::{MooseNGClient, load_client_config};
use anyhow::{Context, Result};
use tracing::{info, warn, error};
use std::collections::HashMap;

#[derive(Subcommand)]
pub enum ClusterCommands {
    /// Show cluster status and health
    Status {
        /// Show detailed status information
        #[arg(short, long)]
        verbose: bool,
    },
    /// Initialize a new cluster
    Init {
        /// Master server addresses (comma-separated)
        #[arg(short, long)]
        masters: String,
        /// Cluster name
        #[arg(short, long)]
        name: String,
        /// Force initialization even if cluster exists
        #[arg(short, long)]
        force: bool,
    },
    /// Join this node to an existing cluster
    Join {
        /// Master server address to join
        #[arg(short, long)]
        master: String,
        /// Node role (master, chunkserver, metalogger)
        #[arg(short, long)]
        role: String,
    },
    /// Leave the cluster (graceful shutdown)
    Leave {
        /// Force leave even if data migration is incomplete
        #[arg(short, long)]
        force: bool,
    },
    /// Scale cluster up or down
    Scale {
        /// Component to scale (chunkserver, master, metalogger)
        component: String,
        /// Target number of instances
        #[arg(short, long)]
        count: u32,
    },
    /// Rolling upgrade of cluster components
    Upgrade {
        /// Component to upgrade (all, master, chunkserver, metalogger)
        #[arg(short, long, default_value = "all")]
        component: String,
        /// Target version
        #[arg(short, long)]
        version: String,
    },
    /// Network topology management
    Topology {
        #[command(subcommand)]
        action: TopologyCommands,
    },
}

#[derive(Subcommand)]
pub enum TopologyCommands {
    /// Show current network topology
    Show {
        /// Output format (text, json, yaml)
        #[arg(short, long, default_value = "text")]
        format: String,
        /// Show detailed connection information
        #[arg(short, long)]
        verbose: bool,
    },
    /// Discover and map network topology
    Discover {
        /// Force rediscovery of all regions
        #[arg(short, long)]
        force: bool,
        /// Discovery timeout in seconds
        #[arg(short, long, default_value = "30")]
        timeout: u64,
    },
    /// List all discovered regions
    Regions {
        /// Show health status of regions
        #[arg(short, long)]
        health: bool,
    },
    /// Show connection details between regions
    Connections {
        /// Source region ID
        #[arg(short, long)]
        from: Option<u32>,
        /// Destination region ID
        #[arg(short, long)]
        to: Option<u32>,
    },
    /// Test connectivity between regions
    Test {
        /// Source region ID
        #[arg(short, long)]
        from: u32,
        /// Destination region ID
        #[arg(short, long)]
        to: u32,
        /// Number of test iterations
        #[arg(short, long, default_value = "5")]
        iterations: u32,
    },
    /// Update topology configuration
    Configure {
        /// Discovery methods to enable (comma-separated)
        #[arg(short, long)]
        methods: Option<String>,
        /// Discovery interval in seconds
        #[arg(short, long)]
        interval: Option<u64>,
        /// Auto-assign regions based on IP
        #[arg(short, long)]
        auto_assign: Option<bool>,
    },
}

#[derive(Debug, Serialize, Deserialize)]
pub struct ClusterStatus {
    pub name: String,
    pub version: String,
    pub state: ClusterState,
    pub masters: Vec<MasterInfo>,
    pub chunkservers: Vec<ChunkServerSummary>,
    pub metaloggers: Vec<MetaloggerInfo>,
    pub total_capacity_bytes: u64,
    pub used_capacity_bytes: u64,
    pub total_chunks: u64,
    pub healthy_chunks: u64,
    pub degraded_chunks: u64,
    pub missing_chunks: u64,
}

#[derive(Debug, Serialize, Deserialize)]
pub enum ClusterState {
    Healthy,
    Degraded,
    Critical,
    Maintenance,
}

#[derive(Debug, Serialize, Deserialize)]
pub struct MasterInfo {
    pub id: String,
    pub host: String,
    pub port: u16,
    pub role: MasterRole,
    pub status: String,
    pub uptime_seconds: u64,
    pub version: String,
}

#[derive(Debug, Serialize, Deserialize)]
pub enum MasterRole {
    Leader,
    Follower,
    Candidate,
}

#[derive(Debug, Serialize, Deserialize)]
pub struct ChunkServerSummary {
    pub id: String,
    pub host: String,
    pub status: String,
    pub capacity_bytes: u64,
    pub used_bytes: u64,
    pub chunk_count: u64,
}

#[derive(Debug, Serialize, Deserialize)]
pub struct MetaloggerInfo {
    pub id: String,
    pub host: String,
    pub port: u16,
    pub status: String,
    pub lag_seconds: u64,
    pub version: String,
}

pub async fn handle_command(command: ClusterCommands) -> Result<(), Box<dyn std::error::Error>> {
    match command {
        ClusterCommands::Status { verbose } => {
            show_cluster_status(verbose).await
        }
        ClusterCommands::Init { masters, name, force } => {
            init_cluster(&masters, &name, force).await
        }
        ClusterCommands::Join { master, role } => {
            join_cluster(&master, &role).await
        }
        ClusterCommands::Leave { force } => {
            leave_cluster(force).await
        }
        ClusterCommands::Scale { component, count } => {
            scale_cluster(&component, count).await
        }
        ClusterCommands::Upgrade { component, version } => {
            upgrade_cluster(&component, &version, "rolling").await
        }
        ClusterCommands::Topology { action } => {
            handle_topology_command(action).await
        }
    }
}

async fn show_cluster_status(verbose: bool) -> Result<(), Box<dyn std::error::Error>> {
    // Load client configuration and connect to cluster
    let config = load_client_config()?;
    let mut client = MooseNGClient::new(config).await?;
    
    // Get cluster status from master server
    match client.get_cluster_status().await {
        Ok(response) => {
            display_cluster_status_from_grpc(response, verbose).await
        }
        Err(e) => {
            eprintln!("Failed to get cluster status: {}", e);
            println!("Using fallback placeholder data...");
            display_placeholder_cluster_status(verbose).await
        }
    }
}

async fn display_cluster_status_from_grpc(
    response: mooseng_protocol::GetClusterStatusResponse,
    verbose: bool,
) -> Result<(), Box<dyn std::error::Error>> {
    use mooseng_protocol::{ServerInfo, ServerType};
    
    println!("Cluster: {} (v{})", response.cluster_name, response.cluster_version);
    println!("State: {}", if response.is_healthy { "Healthy" } else { "Degraded" });
    println!();

    // Capacity overview
    let used_percent = if response.total_capacity_bytes > 0 {
        (response.used_capacity_bytes as f64 / response.total_capacity_bytes as f64) * 100.0
    } else {
        0.0
    };
    
    println!("Capacity: {:.2} TB / {:.2} TB ({:.1}%)",
             response.used_capacity_bytes as f64 / 1_000_000_000_000.0,
             response.total_capacity_bytes as f64 / 1_000_000_000_000.0,
             used_percent);
    
    println!("Chunks: {} total", response.total_chunks);
    println!();

    // Group servers by type
    let mut masters = Vec::new();
    let mut chunkservers = Vec::new();
    let mut metaloggers = Vec::new();
    
    for server in response.servers {
        match ServerType::try_from(server.server_type).unwrap_or(ServerType::Unknown) {
            ServerType::Master => masters.push(server),
            ServerType::ChunkServer => chunkservers.push(server),
            ServerType::MetaLogger => metaloggers.push(server),
            _ => {}
        }
    }

    // Masters
    println!("Masters ({}):", masters.len());
    for master in &masters {
        if verbose {
            println!("  {} - {}:{} - {} - uptime: {} hours",
                     master.server_id, master.host, master.port,
                     master.status, master.uptime_seconds / 3600);
        } else {
            println!("  {} - {}", master.server_id, master.status);
        }
    }
    println!();

    // Chunk servers
    println!("Chunk Servers ({}):", chunkservers.len());
    for cs in &chunkservers {
        let capacity = cs.metrics.get("capacity_bytes")
            .and_then(|v| v.parse::<u64>().ok())
            .unwrap_or(0);
        let used = cs.metrics.get("used_bytes")
            .and_then(|v| v.parse::<u64>().ok())
            .unwrap_or(0);
        let chunks = cs.metrics.get("chunk_count")
            .and_then(|v| v.parse::<u64>().ok())
            .unwrap_or(0);
        
        let used_percent = if capacity > 0 {
            (used as f64 / capacity as f64) * 100.0
        } else {
            0.0
        };
        
        if verbose {
            println!("  {} - {} - {:.2} TB / {:.2} TB ({:.1}%) - {} chunks",
                     cs.server_id, cs.host,
                     used as f64 / 1_000_000_000_000.0,
                     capacity as f64 / 1_000_000_000_000.0,
                     used_percent, chunks);
        } else {
            println!("  {} - {} - {:.1}%", cs.server_id, cs.status, used_percent);
        }
    }
    println!();

    // Metaloggers
    println!("Metalloggers ({}):", metaloggers.len());
    for ml in &metaloggers {
        let lag = ml.metrics.get("lag_seconds")
            .and_then(|v| v.parse::<u64>().ok())
            .unwrap_or(0);
        
        if verbose {
            println!("  {} - {}:{} - {} - lag: {}s",
                     ml.server_id, ml.host, ml.port, ml.status, lag);
        } else {
            println!("  {} - {} - lag: {}s", ml.server_id, ml.status, lag);
        }
    }

    Ok(())
}

async fn display_placeholder_cluster_status(verbose: bool) -> Result<(), Box<dyn std::error::Error>> {
    let status = ClusterStatus {
        name: "mooseng-prod".to_string(),
        version: "1.0.0".to_string(),
        state: ClusterState::Healthy,
        masters: vec![
            MasterInfo {
                id: "master-1".to_string(),
                host: "master1.example.com".to_string(),
                port: 9421,
                role: MasterRole::Leader,
                status: "online".to_string(),
                uptime_seconds: 86400,
                version: "1.0.0".to_string(),
            },
            MasterInfo {
                id: "master-2".to_string(),
                host: "master2.example.com".to_string(),
                port: 9421,
                role: MasterRole::Follower,
                status: "online".to_string(),
                uptime_seconds: 86400,
                version: "1.0.0".to_string(),
            },
        ],
        chunkservers: vec![
            ChunkServerSummary {
                id: "cs-001".to_string(),
                host: "chunk1.example.com".to_string(),
                status: "online".to_string(),
                capacity_bytes: 1_000_000_000_000,
                used_bytes: 750_000_000_000,
                chunk_count: 125000,
            },
            ChunkServerSummary {
                id: "cs-002".to_string(),
                host: "chunk2.example.com".to_string(),
                status: "online".to_string(),
                capacity_bytes: 2_000_000_000_000,
                used_bytes: 500_000_000_000,
                chunk_count: 83333,
            },
        ],
        metaloggers: vec![
            MetaloggerInfo {
                id: "ml-001".to_string(),
                host: "meta1.example.com".to_string(),
                port: 9419,
                status: "online".to_string(),
                lag_seconds: 0,
                version: "1.0.0".to_string(),
            },
        ],
        total_capacity_bytes: 3_000_000_000_000,
        used_capacity_bytes: 1_250_000_000_000,
        total_chunks: 208333,
        healthy_chunks: 208333,
        degraded_chunks: 0,
        missing_chunks: 0,
    };

    println!("Cluster: {} (v{})", status.name, status.version);
    println!("State: {:?}", status.state);
    println!();

    // Capacity overview
    let used_percent = (status.used_capacity_bytes as f64 / status.total_capacity_bytes as f64) * 100.0;
    println!("Capacity: {:.2} TB / {:.2} TB ({:.1}%)",
             status.used_capacity_bytes as f64 / 1_000_000_000_000.0,
             status.total_capacity_bytes as f64 / 1_000_000_000_000.0,
             used_percent);
    
    println!("Chunks: {} total, {} healthy, {} degraded, {} missing",
             status.total_chunks, status.healthy_chunks, 
             status.degraded_chunks, status.missing_chunks);
    println!();

    // Masters
    println!("Masters ({}):", status.masters.len());
    for master in &status.masters {
        let role_str = match master.role {
            MasterRole::Leader => "LEADER",
            MasterRole::Follower => "follower",
            MasterRole::Candidate => "candidate",
        };
        if verbose {
            println!("  {} ({}) - {}:{} - {} - {} - uptime: {} hours",
                     master.id, role_str, master.host, master.port,
                     master.status, master.version,
                     master.uptime_seconds / 3600);
        } else {
            println!("  {} ({}) - {}", master.id, role_str, master.status);
        }
    }
    println!();

    // Chunk servers
    println!("Chunk Servers ({}):", status.chunkservers.len());
    for cs in &status.chunkservers {
        let used_percent = (cs.used_bytes as f64 / cs.capacity_bytes as f64) * 100.0;
        if verbose {
            println!("  {} - {} - {:.2} TB / {:.2} TB ({:.1}%) - {} chunks",
                     cs.id, cs.host,
                     cs.used_bytes as f64 / 1_000_000_000_000.0,
                     cs.capacity_bytes as f64 / 1_000_000_000_000.0,
                     used_percent, cs.chunk_count);
        } else {
            println!("  {} - {} - {:.1}%", cs.id, cs.status, used_percent);
        }
    }
    println!();

    // Metaloggers
    println!("Metaloggers ({}):", status.metaloggers.len());
    for ml in &status.metaloggers {
        if verbose {
            println!("  {} - {}:{} - {} - lag: {}s - {}",
                     ml.id, ml.host, ml.port, ml.status,
                     ml.lag_seconds, ml.version);
        } else {
            println!("  {} - {} - lag: {}s", ml.id, ml.status, ml.lag_seconds);
        }
    }

    Ok(())
}

async fn init_cluster(masters: &str, name: &str, force: bool) -> Result<(), Box<dyn std::error::Error>> {
    println!("Initializing cluster: {}", name);
    println!("Master servers: {}", masters);
    
    if force {
        println!("Force mode enabled - will overwrite existing cluster");
    }
    
    // Parse master addresses
    let master_addresses: Vec<String> = masters
        .split(',')
        .map(|s| {
            let addr = s.trim();
            if !addr.starts_with("http://") && !addr.starts_with("https://") {
                format!("http://{}", addr)
            } else {
                addr.to_string()
            }
        })
        .collect();
    
    // Create temporary client config for initialization
    let mut config = load_client_config().unwrap_or_default();
    config.master_addresses = master_addresses;
    
    // Try to connect to at least one master
    match MooseNGClient::new(config.clone()).await {
        Ok(mut client) => {
            // Check if cluster already exists
            match client.get_cluster_status().await {
                Ok(status) => {
                    if !force && !status.cluster_name.is_empty() {
                        return Err(format!(
                            "Cluster '{}' already exists. Use --force to overwrite.",
                            status.cluster_name
                        ).into());
                    }
                    println!("Connected to existing cluster: {}", status.cluster_name);
                }
                Err(e) => {
                    println!("No existing cluster found: {}", e);
                    println!("Proceeding with initialization...");
                }
            }
            
            // Save the new configuration
            crate::grpc_client::save_client_config(&config)?;
            println!("✓ Cluster configuration saved");
            println!("✓ Cluster '{}' initialized successfully", name);
        }
        Err(e) => {
            return Err(format!("Failed to connect to any master server: {}", e).into());
        }
    }
    
    Ok(())
}

async fn join_cluster(master: &str, role: &str) -> Result<(), Box<dyn std::error::Error>> {
    println!("Joining cluster via master: {}", master);
    println!("Node role: {}", role);
    
    // Validate role
    let valid_roles = ["master", "chunkserver", "metalogger"];
    if !valid_roles.contains(&role) {
        return Err(format!(
            "Invalid role '{}'. Must be one of: {}",
            role,
            valid_roles.join(", ")
        ).into());
    }
    
    // Normalize master address
    let master_addr = if !master.starts_with("http://") && !master.starts_with("https://") {
        format!("http://{}", master)
    } else {
        master.to_string()
    };
    
    // Create client configuration
    let mut config = load_client_config().unwrap_or_default();
    config.master_addresses = vec![master_addr.clone()];
    
    // Connect and register
    match MooseNGClient::new(config.clone()).await {
        Ok(mut client) => {
            // Get local hostname/IP
            let hostname = hostname::get()
                .unwrap_or_else(|_| "unknown".into())
                .to_string_lossy()
                .to_string();
            
            let server_id = format!("{}-{}", role, hostname);
            let default_port = match role {
                "master" => 9421,
                "chunkserver" => 9422,
                "metalogger" => 9419,
                _ => 9420,
            };
            
            // Register with the cluster
            match client.register_server(
                server_id.clone(),
                role.to_string(),
                hostname.clone(),
                default_port,
            ).await {
                Ok(response) => {
                    if response.accepted {
                        println!("✓ Successfully registered as {} with ID: {}", role, server_id);
                        
                        // Update local configuration
                        if !config.master_addresses.contains(&master_addr) {
                            config.master_addresses.push(master_addr);
                        }
                        crate::grpc_client::save_client_config(&config)?;
                        println!("✓ Local configuration updated");
                        
                        // Show peer information if available
                        if !response.peers.is_empty() {
                            println!("Discovered {} peer(s):", response.peers.len());
                            for peer in response.peers {
                                println!("  {} - {}:{}", peer.server_id, peer.host, peer.port);
                            }
                        }
                    } else {
                        return Err(format!(
                            "Registration rejected: {}",
                            response.reject_reason
                        ).into());
                    }
                }
                Err(e) => {
                    return Err(format!("Failed to register with cluster: {}", e).into());
                }
            }
        }
        Err(e) => {
            return Err(format!("Failed to connect to master {}: {}", master, e).into());
        }
    }
    
    println!("✓ Node joined cluster successfully");
    Ok(())
}

async fn leave_cluster(force: bool) -> Result<(), Box<dyn std::error::Error>> {
    let config = load_client_config()?;
    let mut client = MooseNGClient::new(config).await?;
    
    if force {
        println!("⚠️  Force leaving cluster - data migration may be incomplete");
    } else {
        println!("Gracefully leaving cluster - checking for safe departure...");
        
        // Check cluster status first
        match client.get_cluster_status().await {
            Ok(status) => {
                let healthy_servers = status.servers.iter()
                    .filter(|s| s.status == "healthy" || s.status == "online")
                    .count();
                
                if healthy_servers < 2 {
                    return Err(
                        "Cannot safely leave cluster: insufficient healthy servers. Use --force to override."
                            .into(),
                    );
                }
                
                println!("✓ Cluster has {} healthy servers, safe to proceed", healthy_servers);
            }
            Err(e) => {
                if !force {
                    return Err(format!(
                        "Cannot verify cluster health: {}. Use --force to override.",
                        e
                    ).into());
                }
                println!("⚠️  Cannot verify cluster health, proceeding anyway: {}", e);
            }
        }
    }
    
    // Get local server information
    let hostname = hostname::get()
        .unwrap_or_else(|_| "unknown".into())
        .to_string_lossy()
        .to_string();
    
    // Send final heartbeat with "leaving" status
    let server_id = format!("local-{}", hostname).parse().unwrap_or(0);
    let capabilities = mooseng_protocol::ServerCapabilities::default();
    match client.send_heartbeat(server_id, capabilities).await {
        Ok(_) => {
            println!("✓ Sent departure notification to cluster");
        }
        Err(e) => {
            println!("⚠️  Failed to notify cluster of departure: {}", e);
            if !force {
                return Err("Failed to gracefully leave cluster. Use --force to override.".into());
            }
        }
    }
    
    // Clear local configuration (keep backup)
    let config_path = dirs::home_dir()
        .ok_or("Cannot determine home directory")?
        .join(".mooseng");
    
    if config_path.join("cli.toml").exists() {
        let backup_path = config_path.join("cli.toml.backup");
        std::fs::copy(config_path.join("cli.toml"), &backup_path)?;
        std::fs::remove_file(config_path.join("cli.toml"))?;
        println!("✓ Local configuration cleared (backup saved at {})", backup_path.display());
    }
    
    println!("✓ Node left cluster successfully");
    Ok(())
}

async fn scale_cluster(component: &str, count: u32) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual cluster scaling
    println!("Scaling {} to {} instances", component, count);
    println!("Scaling operation started (placeholder implementation)");
    Ok(())
}

async fn upgrade_cluster(component: &str, version: &str, strategy: &str) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual cluster upgrade
    println!("Upgrading {} to version {} using {} strategy", component, version, strategy);
    println!("Upgrade operation started (placeholder implementation)");
    Ok(())
}

async fn handle_topology_command(action: TopologyCommands) -> Result<(), Box<dyn std::error::Error>> {
    match action {
        TopologyCommands::Show { format, verbose } => {
            show_topology(&format, verbose).await
        }
        TopologyCommands::Discover { force, timeout } => {
            discover_topology(force, timeout).await
        }
        TopologyCommands::Regions { health } => {
            list_regions(health).await
        }
        TopologyCommands::Connections { from, to } => {
            show_connections(from, to).await
        }
        TopologyCommands::Test { from, to, iterations } => {
            test_connectivity(from, to, iterations).await
        }
        TopologyCommands::Configure { methods, interval, auto_assign } => {
            configure_topology(methods, interval, auto_assign).await
        }
    }
}

async fn show_topology(format: &str, verbose: bool) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual topology retrieval
    println!("Network Topology (format: {})", format);
    println!();
    
    match format {
        "json" => {
            println!(r#"{{
  "local_region": 1,
  "regions": {{
    "1": {{
      "region_id": 1,
      "region_name": "us-east",
      "health_status": "Healthy",
      "peer_count": 3,
      "last_seen": "2025-05-31T14:00:00Z"
    }},
    "2": {{
      "region_id": 2,
      "region_name": "eu-west",
      "health_status": "Healthy", 
      "peer_count": 2,
      "last_seen": "2025-05-31T14:00:00Z"
    }}
  }},
  "connections": {{
    "1->2": {{
      "latency_ms": 85.2,
      "bandwidth_mbps": 100.0,
      "packet_loss_percent": 0.1,
      "reliability_score": 0.99
    }}
  }}
}}"#);
        }
        _ => {
            println!("Regions:");
            println!("  Region 1 (us-east): Healthy - 3 peers");
            println!("  Region 2 (eu-west): Healthy - 2 peers");
            println!();
            println!("Inter-region Connections:");
            println!("  us-east -> eu-west: 85.2ms latency, 100 Mbps, 99% reliability");
            
            if verbose {
                println!();
                println!("Detailed Metrics:");
                println!("  Packet Loss: 0.1%");
                println!("  Last Measured: 2025-05-31 14:00:00 UTC");
            }
        }
    }
    
    Ok(())
}

async fn discover_topology(force: bool, timeout: u64) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual topology discovery
    println!("Starting topology discovery...");
    if force {
        println!("Force mode: rediscovering all regions");
    }
    println!("Discovery timeout: {} seconds", timeout);
    println!();
    println!("Discovery completed (placeholder implementation)");
    println!("Found 2 regions, 5 peers total");
    Ok(())
}

async fn list_regions(health: bool) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual region listing
    println!("Discovered Regions:");
    println!();
    
    if health {
        println!("ID  Name        Status   Peers  Last Seen           Health Score");
        println!("--  ----------  -------  -----  ------------------  ------------");
        println!("1   us-east     Healthy  3      2025-05-31 14:00:00  100%");
        println!("2   eu-west     Healthy  2      2025-05-31 14:00:00  99%");
    } else {
        println!("ID  Name        Peers");
        println!("--  ----------  -----");
        println!("1   us-east     3");
        println!("2   eu-west     2");
    }
    
    Ok(())
}

async fn show_connections(from: Option<u32>, to: Option<u32>) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual connection details
    match (from, to) {
        (Some(f), Some(t)) => {
            println!("Connection: Region {} -> Region {}", f, t);
            println!("  Latency: 85.2ms");
            println!("  Bandwidth: 100 Mbps"); 
            println!("  Packet Loss: 0.1%");
            println!("  Reliability: 99%");
            println!("  Status: Healthy");
        }
        _ => {
            println!("All Inter-region Connections:");
            println!();
            println!("From  To   Latency  Bandwidth  Loss  Reliability  Status");
            println!("----  --   -------  ---------  ----  -----------  ------");
            println!("1     2    85.2ms   100 Mbps   0.1%  99%          Healthy");
            println!("2     1    87.1ms   100 Mbps   0.1%  99%          Healthy");
        }
    }
    
    Ok(())
}

async fn test_connectivity(from: u32, to: u32, iterations: u32) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual connectivity testing
    println!("Testing connectivity: Region {} -> Region {}", from, to);
    println!("Iterations: {}", iterations);
    println!();
    
    for i in 1..=iterations {
        println!("Test {}: 85.{}ms", i, 100 + (i % 50));
    }
    
    println!();
    println!("Summary:");
    println!("  Average latency: 85.2ms");
    println!("  Min latency: 85.1ms");
    println!("  Max latency: 85.4ms");
    println!("  Packet loss: 0%");
    println!("  Connection status: Healthy");
    
    Ok(())
}

async fn configure_topology(
    methods: Option<String>,
    interval: Option<u64>,
    auto_assign: Option<bool>,
) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual topology configuration
    println!("Updating topology configuration:");
    
    if let Some(m) = methods {
        println!("  Discovery methods: {}", m);
    }
    
    if let Some(i) = interval {
        println!("  Discovery interval: {} seconds", i);
    }
    
    if let Some(a) = auto_assign {
        println!("  Auto-assign regions: {}", a);
    }
    
    println!("Configuration updated successfully (placeholder implementation)");
    Ok(())
}

