use clap::Subcommand;
use serde::{Deserialize, Serialize};
use std::path::{Path, PathBuf};
use std::collections::HashMap;
use crate::grpc_client::{MooseNGClient, load_client_config};

#[derive(Subcommand)]
pub enum DataCommands {
    /// Upload files or directories to MooseNG
    Upload {
        /// Local file or directory path
        local_path: String,
        /// Remote path in MooseNG filesystem
        remote_path: String,
        /// Upload recursively for directories
        #[arg(short, long)]
        recursive: bool,
        /// Storage class to use
        #[arg(short, long)]
        storage_class: Option<String>,
        /// Enable compression during upload
        #[arg(short, long)]
        compress: bool,
        /// Number of parallel upload streams
        #[arg(short, long, default_value = "4")]
        parallel: u32,
        /// Resume interrupted upload
        #[arg(long)]
        resume: bool,
    },
    /// Download files or directories from MooseNG
    Download {
        /// Remote path in MooseNG filesystem
        remote_path: String,
        /// Local destination path
        local_path: String,
        /// Download recursively for directories
        #[arg(short, long)]
        recursive: bool,
        /// Number of parallel download streams
        #[arg(short, long, default_value = "4")]
        parallel: u32,
        /// Resume interrupted download
        #[arg(long)]
        resume: bool,
    },
    /// Synchronize directories between local and remote
    Sync {
        /// Local directory path
        local_path: String,
        /// Remote directory path in MooseNG
        remote_path: String,
        /// Sync direction (up, down, bidirectional)
        #[arg(short, long, default_value = "up")]
        direction: String,
        /// Delete files that don't exist in source
        #[arg(long)]
        delete: bool,
        /// Dry run - show what would be transferred
        #[arg(short, long)]
        dry_run: bool,
        /// Storage class for uploaded files
        #[arg(short, long)]
        storage_class: Option<String>,
    },
    /// List files and directories in MooseNG filesystem
    List {
        /// Remote path to list
        #[arg(default_value = "/")]
        path: String,
        /// Show detailed information
        #[arg(short, long)]
        long: bool,
        /// List recursively
        #[arg(short, long)]
        recursive: bool,
        /// Show hidden files
        #[arg(short, long)]
        all: bool,
        /// Human readable sizes
        #[arg(short, long)]
        human_readable: bool,
    },
    /// Copy files within MooseNG filesystem
    Copy {
        /// Source path
        source: String,
        /// Destination path
        destination: String,
        /// Copy recursively for directories
        #[arg(short, long)]
        recursive: bool,
        /// Preserve file attributes
        #[arg(short, long)]
        preserve: bool,
    },
    /// Move/rename files within MooseNG filesystem
    Move {
        /// Source path
        source: String,
        /// Destination path
        destination: String,
    },
    /// Delete files or directories from MooseNG filesystem
    Delete {
        /// Path to delete
        path: String,
        /// Delete recursively for directories
        #[arg(short, long)]
        recursive: bool,
        /// Force deletion without confirmation
        #[arg(short, long)]
        force: bool,
    },
    /// Create directories in MooseNG filesystem
    Mkdir {
        /// Directory path to create
        path: String,
        /// Create parent directories as needed
        #[arg(short, long)]
        parents: bool,
    },
    /// Get file or directory information
    Info {
        /// Path to get info for
        path: String,
        /// Show storage class information
        #[arg(short, long)]
        storage: bool,
        /// Show chunk distribution
        #[arg(short, long)]
        chunks: bool,
    },
    /// Set file attributes
    SetAttr {
        /// File or directory path
        path: String,
        /// Storage class to set
        #[arg(short, long)]
        storage_class: Option<String>,
        /// Replication factor
        #[arg(short, long)]
        replication: Option<u32>,
        /// Apply recursively
        #[arg(short, long)]
        recursive: bool,
    },
}

#[derive(Debug, Serialize, Deserialize)]
pub struct FileInfo {
    pub name: String,
    pub path: String,
    pub size: u64,
    pub is_directory: bool,
    pub created_at: u64,
    pub modified_at: u64,
    pub storage_class: String,
    pub replication_factor: u32,
    pub chunk_count: u32,
    pub permissions: String,
    pub owner: String,
    pub group: String,
}

#[derive(Debug, Serialize, Deserialize)]
pub struct TransferProgress {
    pub bytes_transferred: u64,
    pub total_bytes: u64,
    pub files_transferred: u32,
    pub total_files: u32,
    pub current_file: String,
    pub elapsed_seconds: u64,
    pub estimated_seconds_remaining: Option<u64>,
    pub transfer_rate_mbps: f64,
}

#[derive(Debug, Serialize, Deserialize)]
pub struct SyncStats {
    pub files_to_upload: u32,
    pub files_to_download: u32,
    pub files_to_delete: u32,
    pub bytes_to_transfer: u64,
    pub conflicts: Vec<String>,
}

pub async fn handle_command(command: DataCommands) -> Result<(), Box<dyn std::error::Error>> {
    match command {
        DataCommands::Upload { local_path, remote_path, recursive, storage_class, compress, parallel, resume } => {
            upload_data(&local_path, &remote_path, recursive, storage_class.as_deref(), compress, parallel, resume).await
        }
        DataCommands::Download { remote_path, local_path, recursive, parallel, resume } => {
            download_data(&remote_path, &local_path, recursive, parallel, resume).await
        }
        DataCommands::Sync { local_path, remote_path, direction, delete, dry_run, storage_class } => {
            sync_data(&local_path, &remote_path, &direction, delete, dry_run, storage_class.as_deref()).await
        }
        DataCommands::List { path, long, recursive, all, human_readable } => {
            list_files(&path, long, recursive, all, human_readable).await
        }
        DataCommands::Copy { source, destination, recursive, preserve } => {
            copy_files(&source, &destination, recursive, preserve).await
        }
        DataCommands::Move { source, destination } => {
            move_files(&source, &destination).await
        }
        DataCommands::Delete { path, recursive, force } => {
            delete_files(&path, recursive, force).await
        }
        DataCommands::Mkdir { path, parents } => {
            create_directory(&path, parents).await
        }
        DataCommands::Info { path, storage, chunks } => {
            show_file_info(&path, storage, chunks).await
        }
        DataCommands::SetAttr { path, storage_class, replication, recursive } => {
            set_file_attributes(&path, storage_class.as_deref(), replication, recursive).await
        }
    }
}

async fn upload_data(
    local_path: &str,
    remote_path: &str,
    recursive: bool,
    storage_class: Option<&str>,
    compress: bool,
    parallel: u32,
    resume: bool,
) -> Result<(), Box<dyn std::error::Error>> {
    println!("Uploading {} to {}", local_path, remote_path);
    
    let local_path = Path::new(local_path);
    if !local_path.exists() {
        return Err(format!("Local path does not exist: {}", local_path.display()).into());
    }
    
    // TODO: Implement actual upload via gRPC client
    // For now, simulate the upload process
    
    if local_path.is_dir() && !recursive {
        return Err("Use --recursive to upload directories".into());
    }
    
    // Scan files to upload
    let files_to_upload = if local_path.is_dir() {
        scan_directory_recursive(local_path)?
    } else {
        vec![local_path.to_path_buf()]
    };
    
    let total_files = files_to_upload.len();
    let total_size: u64 = files_to_upload
        .iter()
        .map(|f| f.metadata().map(|m| m.len()).unwrap_or(0))
        .sum();
    
    println!("Upload Summary:");
    println!("  Files: {}", total_files);
    println!("  Total Size: {}", format_bytes(total_size));
    println!("  Storage Class: {}", storage_class.unwrap_or("default"));
    println!("  Compression: {}", if compress { "enabled" } else { "disabled" });
    println!("  Parallel Streams: {}", parallel);
    
    if resume {
        println!("  Resume Mode: enabled");
    }
    
    println!();
    println!("Starting upload...");
    
    // Simulate upload progress
    for (i, file) in files_to_upload.iter().enumerate() {
        let file_size = file.metadata()?.len();
        let relative_path = file.strip_prefix(local_path.parent().unwrap_or(local_path))?;
        
        println!("Uploading: {} ({}) [{}/{}]", 
                 relative_path.display(), 
                 format_bytes(file_size),
                 i + 1, 
                 total_files);
        
        // Simulate transfer time based on file size
        let transfer_time = std::cmp::min(file_size / 10_000_000, 2000); // Max 2 seconds
        tokio::time::sleep(tokio::time::Duration::from_millis(transfer_time)).await;
    }
    
    println!("Upload completed successfully!");
    println!("Transferred {} files ({}) to {}", total_files, format_bytes(total_size), remote_path);
    
    Ok(())
}

async fn download_data(
    remote_path: &str,
    local_path: &str,
    recursive: bool,
    parallel: u32,
    resume: bool,
) -> Result<(), Box<dyn std::error::Error>> {
    println!("Downloading {} to {}", remote_path, local_path);
    
    // TODO: Implement actual download via gRPC client
    // For now, simulate the download process
    
    let local_path = Path::new(local_path);
    
    // Create local directory if it doesn't exist
    if let Some(parent) = local_path.parent() {
        std::fs::create_dir_all(parent)?;
    }
    
    // Simulate getting file list from remote
    let files_to_download = vec![
        ("file1.txt".to_string(), 1024),
        ("file2.dat".to_string(), 5_000_000),
        ("subdir/file3.bin".to_string(), 10_000_000),
    ];
    
    let total_files = files_to_download.len();
    let total_size: u64 = files_to_download.iter().map(|(_, size)| *size).sum();
    
    println!("Download Summary:");
    println!("  Files: {}", total_files);
    println!("  Total Size: {}", format_bytes(total_size));
    println!("  Parallel Streams: {}", parallel);
    
    if resume {
        println!("  Resume Mode: enabled");
    }
    
    println!();
    println!("Starting download...");
    
    // Simulate download progress
    for (i, (file_name, file_size)) in files_to_download.iter().enumerate() {
        println!("Downloading: {} ({}) [{}/{}]", 
                 file_name, 
                 format_bytes(*file_size),
                 i + 1, 
                 total_files);
        
        // Simulate transfer time based on file size
        let transfer_time = std::cmp::min(file_size / 10_000_000, 2000); // Max 2 seconds
        tokio::time::sleep(tokio::time::Duration::from_millis(transfer_time)).await;
    }
    
    println!("Download completed successfully!");
    println!("Downloaded {} files ({}) to {}", total_files, format_bytes(total_size), local_path.display());
    
    Ok(())
}

async fn sync_data(
    local_path: &str,
    remote_path: &str,
    direction: &str,
    delete: bool,
    dry_run: bool,
    storage_class: Option<&str>,
) -> Result<(), Box<dyn std::error::Error>> {
    println!("Synchronizing {} <-> {}", local_path, remote_path);
    println!("Direction: {}", direction);
    
    // TODO: Implement actual sync via gRPC client
    // For now, simulate the sync analysis
    
    let stats = SyncStats {
        files_to_upload: 5,
        files_to_download: 2,
        files_to_delete: 1,
        bytes_to_transfer: 15_000_000,
        conflicts: vec!["file_modified_both_sides.txt".to_string()],
    };
    
    println!("Sync Analysis:");
    println!("  Files to upload: {}", stats.files_to_upload);
    println!("  Files to download: {}", stats.files_to_download);
    if delete {
        println!("  Files to delete: {}", stats.files_to_delete);
    }
    println!("  Data to transfer: {}", format_bytes(stats.bytes_to_transfer));
    
    if !stats.conflicts.is_empty() {
        println!("  Conflicts found: {}", stats.conflicts.len());
        for conflict in &stats.conflicts {
            println!("    - {}", conflict);
        }
    }
    
    if storage_class.is_some() {
        println!("  Storage class: {}", storage_class.unwrap());
    }
    
    if dry_run {
        println!();
        println!("Dry run complete - no files were transferred");
        return Ok(());
    }
    
    // Simulate sync operation
    println!();
    println!("Starting synchronization...");
    
    // Upload phase
    for i in 1..=stats.files_to_upload {
        println!("Uploading file {} of {}", i, stats.files_to_upload);
        tokio::time::sleep(tokio::time::Duration::from_millis(500)).await;
    }
    
    // Download phase
    for i in 1..=stats.files_to_download {
        println!("Downloading file {} of {}", i, stats.files_to_download);
        tokio::time::sleep(tokio::time::Duration::from_millis(500)).await;
    }
    
    // Delete phase
    if delete && stats.files_to_delete > 0 {
        for i in 1..=stats.files_to_delete {
            println!("Deleting file {} of {}", i, stats.files_to_delete);
            tokio::time::sleep(tokio::time::Duration::from_millis(200)).await;
        }
    }
    
    println!("Synchronization completed successfully!");
    
    Ok(())
}

async fn list_files(
    path: &str,
    long: bool,
    recursive: bool,
    all: bool,
    human_readable: bool,
) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual file listing via gRPC client
    // For now, simulate file listing
    
    let files = vec![
        FileInfo {
            name: "documents".to_string(),
            path: "/documents".to_string(),
            size: 0,
            is_directory: true,
            created_at: 1640995200, // 2022-01-01
            modified_at: 1640995200,
            storage_class: "default".to_string(),
            replication_factor: 2,
            chunk_count: 0,
            permissions: "drwxr-xr-x".to_string(),
            owner: "user".to_string(),
            group: "users".to_string(),
        },
        FileInfo {
            name: "large_file.dat".to_string(),
            path: "/large_file.dat".to_string(),
            size: 1_073_741_824, // 1GB
            is_directory: false,
            created_at: 1640995200,
            modified_at: 1641081600,
            storage_class: "archive".to_string(),
            replication_factor: 1,
            chunk_count: 16,
            permissions: "-rw-r--r--".to_string(),
            owner: "user".to_string(),
            group: "users".to_string(),
        },
        FileInfo {
            name: "config.json".to_string(),
            path: "/config.json".to_string(),
            size: 2048,
            is_directory: false,
            created_at: 1640995200,
            modified_at: 1641168000,
            storage_class: "default".to_string(),
            replication_factor: 3,
            chunk_count: 1,
            permissions: "-rw-r--r--".to_string(),
            owner: "admin".to_string(),
            group: "admin".to_string(),
        },
    ];
    
    if long {
        println!("{:<12} {:<8} {:<8} {:<12} {:<20} {:<12} {:<20}", 
                 "Permissions", "Owner", "Group", "Size", "Modified", "Storage", "Name");
        println!("{}", "-".repeat(100));
        
        for file in &files {
            let size_str = if human_readable {
                format_bytes(file.size)
            } else {
                file.size.to_string()
            };
            
            let modified = chrono::DateTime::from_timestamp(file.modified_at as i64, 0)
                .unwrap_or_default()
                .format("%Y-%m-%d %H:%M:%S");
            
            println!("{:<12} {:<8} {:<8} {:<12} {:<20} {:<12} {:<20}", 
                     file.permissions,
                     file.owner,
                     file.group,
                     size_str,
                     modified,
                     file.storage_class,
                     file.name);
        }
    } else {
        for file in &files {
            if file.is_directory {
                println!("{}/", file.name);
            } else {
                println!("{}", file.name);
            }
        }
    }
    
    let total_files = files.len();
    let total_size: u64 = files.iter().map(|f| f.size).sum();
    
    println!();
    println!("Total: {} items, {}", total_files, format_bytes(total_size));
    
    Ok(())
}

async fn copy_files(
    source: &str,
    destination: &str,
    recursive: bool,
    preserve: bool,
) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual copy via gRPC client
    println!("Copying {} to {}", source, destination);
    if recursive {
        println!("Recursive copy enabled");
    }
    if preserve {
        println!("Preserving file attributes");
    }
    
    // Simulate copy operation
    tokio::time::sleep(tokio::time::Duration::from_millis(1000)).await;
    println!("Copy completed successfully");
    
    Ok(())
}

async fn move_files(source: &str, destination: &str) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual move via gRPC client
    println!("Moving {} to {}", source, destination);
    
    // Simulate move operation
    tokio::time::sleep(tokio::time::Duration::from_millis(500)).await;
    println!("Move completed successfully");
    
    Ok(())
}

async fn delete_files(path: &str, recursive: bool, force: bool) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual delete via gRPC client
    
    if !force {
        println!("Are you sure you want to delete '{}'? (y/N)", path);
        println!("Use --force to skip this confirmation");
        return Ok(());
    }
    
    println!("Deleting {}", path);
    if recursive {
        println!("Recursive deletion enabled");
    }
    
    // Simulate delete operation
    tokio::time::sleep(tokio::time::Duration::from_millis(300)).await;
    println!("Delete completed successfully");
    
    Ok(())
}

async fn create_directory(path: &str, parents: bool) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual directory creation via gRPC client
    println!("Creating directory: {}", path);
    if parents {
        println!("Creating parent directories as needed");
    }
    
    // Simulate directory creation
    tokio::time::sleep(tokio::time::Duration::from_millis(200)).await;
    println!("Directory created successfully");
    
    Ok(())
}

async fn show_file_info(path: &str, storage: bool, chunks: bool) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual file info retrieval via gRPC client
    
    let file_info = FileInfo {
        name: "example_file.dat".to_string(),
        path: path.to_string(),
        size: 536_870_912, // 512MB
        is_directory: false,
        created_at: 1640995200,
        modified_at: 1641081600,
        storage_class: "default".to_string(),
        replication_factor: 2,
        chunk_count: 8,
        permissions: "-rw-r--r--".to_string(),
        owner: "user".to_string(),
        group: "users".to_string(),
    };
    
    println!("File Information:");
    println!("  Path: {}", file_info.path);
    println!("  Size: {} ({})", format_bytes(file_info.size), file_info.size);
    println!("  Type: {}", if file_info.is_directory { "directory" } else { "file" });
    println!("  Permissions: {}", file_info.permissions);
    println!("  Owner: {}:{}", file_info.owner, file_info.group);
    
    let created = chrono::DateTime::from_timestamp(file_info.created_at as i64, 0)
        .unwrap_or_default()
        .format("%Y-%m-%d %H:%M:%S");
    let modified = chrono::DateTime::from_timestamp(file_info.modified_at as i64, 0)
        .unwrap_or_default()
        .format("%Y-%m-%d %H:%M:%S");
    
    println!("  Created: {}", created);
    println!("  Modified: {}", modified);
    
    if storage {
        println!("  Storage Class: {}", file_info.storage_class);
        println!("  Replication Factor: {}", file_info.replication_factor);
        println!("  Chunk Count: {}", file_info.chunk_count);
    }
    
    if chunks {
        println!("  Chunk Distribution:");
        // Simulate chunk locations
        for i in 1..=file_info.chunk_count {
            println!("    Chunk {}: chunkserver-{}, chunkserver-{}", 
                     i, 
                     (i % 3) + 1, 
                     ((i + 1) % 3) + 1);
        }
    }
    
    Ok(())
}

async fn set_file_attributes(
    path: &str,
    storage_class: Option<&str>,
    replication: Option<u32>,
    recursive: bool,
) -> Result<(), Box<dyn std::error::Error>> {
    // TODO: Implement actual attribute setting via gRPC client
    
    println!("Setting attributes for: {}", path);
    
    if let Some(sc) = storage_class {
        println!("  Storage Class: {}", sc);
    }
    
    if let Some(repl) = replication {
        println!("  Replication Factor: {}", repl);
    }
    
    if recursive {
        println!("  Applying recursively");
    }
    
    // Simulate attribute setting
    tokio::time::sleep(tokio::time::Duration::from_millis(500)).await;
    println!("Attributes updated successfully");
    
    Ok(())
}

fn scan_directory_recursive(dir: &Path) -> Result<Vec<PathBuf>, Box<dyn std::error::Error>> {
    let mut files = Vec::new();
    
    fn scan_dir(dir: &Path, files: &mut Vec<PathBuf>) -> Result<(), Box<dyn std::error::Error>> {
        for entry in std::fs::read_dir(dir)? {
            let entry = entry?;
            let path = entry.path();
            
            if path.is_file() {
                files.push(path);
            } else if path.is_dir() {
                scan_dir(&path, files)?;
            }
        }
        Ok(())
    }
    
    if dir.is_file() {
        files.push(dir.to_path_buf());
    } else {
        scan_dir(dir, &mut files)?;
    }
    
    Ok(files)
}

fn format_bytes(bytes: u64) -> String {
    const UNITS: &[&str] = &["B", "KB", "MB", "GB", "TB", "PB"];
    
    if bytes == 0 {
        return "0 B".to_string();
    }
    
    let bytes_f = bytes as f64;
    let i = (bytes_f.log10() / 3.0) as usize;
    let size = bytes_f / 1000_f64.powi(i as i32);
    
    if i >= UNITS.len() {
        format!("{:.1} {}", size / 1000_f64.powi((UNITS.len() - 1) as i32), UNITS[UNITS.len() - 1])
    } else {
        format!("{:.1} {}", size, UNITS[i])
    }
}